tests/compile-fail/test.rs
// hi!

extern crate doesntexist;   //~ error: can't find crate
